####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = player

## INCLUDES were found outside kdevelop specific part

player_SOURCES = string_splitter.cpp temp_dir.cpp player_timed_events.cpp timed_events.cpp rr_psql.cpp char_array_maths.cpp rr_security.cpp dir_list.cpp logging.cpp player_logger.cpp logger.cpp xmmsctrl.cpp xmms_controller.cpp rr_utils.cpp player.cpp mp3_tags.cpp media_player.cpp build_num.cpp main.cpp 
player_LDADD   = -lglib -lpqxx

SUBDIRS = docs 

EXTRA_DIST = main.cpp build_num.cpp build_num.h media_player.cpp media_player.h mp3_tags.cpp mp3_tags.h player.cpp player.h rr_utils.cpp rr_utils.h xmms_controller.cpp xmms_controller.h xmmsctrl.cpp xmmsctrl.h xmms_controlsocket.h logger.h logger.cpp player_logger.cpp player_logger.h logging.cpp logging.h log_catagories.h player_areas.h dir_list.cpp dir_list.h rr_security.cpp rr_security.h char_array_maths.cpp char_array_maths.h rr_psql.cpp rr_psql.h timed_events.cpp timed_events.h player_timed_events.cpp player_timed_events.h event.h check_library_versions.h temp_dir.cpp temp_dir.h string_splitter.cpp string_splitter.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
player_LDFLAGS = $(all_libraries) 
                                                                                
