####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcommon.a

INCLUDES = $(all_includes)

libcommon_a_METASOURCES = AUTO

libcommon_a_SOURCES = maths.cpp xmms_controller.cpp string_splitter.cpp xmmsctrl.cpp temp_dir.cpp system.cpp rr_date.cpp linein.cpp dir_list.cpp config_file.cpp char_array_maths.cpp file.cpp rr_security.cpp psql.cpp my_time.cpp my_string.cpp logging.cpp exception.cpp 


EXTRA_DIST = exception.cpp exception.h logging.cpp logging.h my_string.cpp my_string.h my_time.cpp my_time.h psql.cpp psql.h rr_security.cpp rr_security.h file.h file.cpp char_array_maths.cpp char_array_maths.h config_file.cpp config_file.h dir_list.cpp dir_list.h linein.cpp linein.h rr_date.cpp rr_date.h system.cpp system.h temp_dir.cpp temp_dir.h testing.h xmms_controller.h xmms_controlsocket.h xmmsctrl.cpp xmmsctrl.h string_splitter.cpp string_splitter.h xmms_controller.cpp maths.cpp maths.h 

####### kdevelop will overwrite this part!!! (end)############
