INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES = libcommon.a


libcommon_a_SOURCES = file.cpp psql.cpp logging.cpp exception.cpp my_time.cpp \
		my_string.cpp system.cpp rr_date.cpp rr_security.cpp config_file.cpp dir_list.cpp \
		xmms_controller.cpp linein.cpp string_splitter.cpp char_array_maths.cpp temp_dir.cpp \
		xmmsctrl.cpp mp3_tags.cpp string_hash_set.cpp


